content/panorama/styles/custom_game/hud.css
.MainHud {
    width: 100%;
    height: 100%;
}

.UIHighlightScalingAnimation
{
    animation-name: scalingAnimationUI;
    animation-duration: 0.5s;
    animation-iteration-count: 1;
    animation-timing-function: linear;
}

@keyframes 'scalingAnimationUI' {
    0% {
        box-shadow: 0 0 5px gold;
        transform: translate3d( 25px, -620px, -0px );
        pre-transform-scale2d: 5, 5;
    }
    25% {
        box-shadow: 0 0 10px gold;
        pre-transform-scale2d: 4, 4;
    }
    50% {
        box-shadow: 0 0 20px gold;
        pre-transform-scale2d: 3, 3;
    }
    75% {
        box-shadow: 0 0 10px gold;
        pre-transform-scale2d: 2, 2;
    }
    100% {
        box-shadow: 0 0 5px gold;
        pre-transform-scale2d: 1, 1;
    }
}

.UIHighlight {
    z-index: 100;
    animation-name: highlightGlow;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

@keyframes 'highlightGlow' {
    0% {
        box-shadow: 0 0 5px gold;
    }
    25% {
        box-shadow: 0 0 10px gold;
    }
    50% {
        box-shadow: 0 0 30px gold;
    }
    75% {
        box-shadow: 0 0 10px gold;
    }
    100% {
        box-shadow: 0 0 5px gold;
    }
}

.UIHighlightCourierDeliverButton
{
    border: 8px solid    #CFB53B;
    border-radius: 50%;
    margin-left: -5px;    
}

#UIHighlightMouseButton {
    width: 35px;
    height: 50px;
    margin-left: -50px;
    margin-top: -10px;
    opacity: 0.6;

    animation-name: mouseAnim;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

@keyframes 'mouseAnim' {
    0% {
        opacity: 0.9;
    }
    50% {
        opacity: 0.6;
    }
    100% {
        opacity: 0.9;
    }
}

.Left {
    background-image: url("file://{images}/custom_game/hud/mouse-l.png");
    background-size: 100% 100%;
}

.Right {
    background-image: url("file://{images}/custom_game/hud/mouse-r.png");
    background-size: 100% 100%;
}

#ChaptersMenu {
    width: 1200px;
    height: 400px;
    align: center center;

    opacity: 0;
    transform: scale3d(0, 0, 1);
    transition-property: opacity, transform;
    transition-duration: 0.3s;
    z-index: 5;
    background-color: #000000ef;
    border-radius: 5px;
    box-shadow: #000000aa -4px -4px 8px 8px;
}

#ChaptersMenu.Visible {
    opacity: 1;
    transform: scale3d(1, 1, 1);
}

.ChaptersMenuHeader {
    width: 100%;
    height: 10%;
}

.ChaptersTitle {
    text-align: center;
    align: center center;

    text-transform: uppercase;
    color: gradient( linear, 0% 0%, 100% 0%, from( #F8E8B9 ), color-stop( 0.5, #E4C269), to( #C79123 ) );
    text-shadow: 0px 0px 3px 5.0 #000000;
    font-weight: bold;
    font-size: 25px;
    letter-spacing: 2px;
    margin-top: 5px;
    font-family: titleFont;
}

.ChaptersCloseButton {
    horizontal-align: right;
    width: 30px;
    height: 30px;

    background-size: 100%;
    background-color: #444;
    background-image: url("file://{images}/custom_game/skip_section/close_icon.png");
    background-repeat: no-repeat;

    margin-top: 8px;
    margin-right: 19px;
    brightness: 1;
    transition-property: brightness;
    transition-duration: 0.2s;

    border-radius: 2px;
}

.ChaptersCloseButton:hover {
    brightness: 1.5;
}

.ChaptersMenuContents {
    width: 100%;
    height: 90%;
    vertical-align: bottom;
    flow-children: right;
}

.ChapterContainer {
    height: 340px;
    width: 188px;

    margin-left: 10px;
    margin-top: 10px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    background-image: url("file://{images}/custom_game/skip_section/backgroundcover.png");
    background-size: 100% 100%;
    transition-property: background-image;
    transition-duration: 0.2s;
}

.ChapterContainer:hover {
    brightness: 1.5;
    transition-property: box-shadow;
    transition-duration: 0.2s;
}

.ChapterArtContainer {
    width: 100%;
    height: 60%;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    background-size: 90% 100%;
    background-position: 10px 10px;
    background-repeat: no-repeat;

    tooltip-position: top;
}

.ChapterInformationContainer {
    width: 100%;
    height: 40%;
    vertical-align: bottom;
}

.Chapter1Art {
    width: 65%;
    height: 65%;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-image: url("file://{images}/custom_game/skip_section/Chapter1Art.png");
    margin-top: 40px;
    align: center center;
}

.Chapter2Art {
    width: 75%;
    height: 75%;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-image: url("file://{images}/custom_game/skip_section/Chapter2Art.png");
    margin-left: 10px;
    margin-top: 40px;
    align: center center;
}

.Chapter3Art {
    width: 65%;
    height: 65%;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-image: url("file://{images}/custom_game/skip_section/Chapter3Art.png");
    margin-top: 55px;
    margin-left: 10px;
    align: center center;
}

.Chapter4Art {
    width: 100%;
    height: 70%;
    background-size: 50% 50%;
    background-repeat: no-repeat;
    background-position: 15px 20px;
    margin-top: 30px;
    align: center center;
}

.Chapter5Art {
    width: 65%;
    height: 65%;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-image: url("file://{images}/custom_game/skip_section/Chapter5Art.png");
    align: center center;
    margin-top: 40px;
}

.Chapter6Art {
    width: 65%;
    height: 65%;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-image: url("file://{images}/custom_game/skip_section/Chapter6Art.png");
    align: center center;
    margin-top: 30px;
}
/* ... */

